Revision history for NGS-Tools-Picard

0.01    2014-03-11
        Initial release of v0.1.

0.02    2014-03-12
        Added CollectInsertSizeMetrics.jar to the list of programs as
        Moose roles.

0.03    2014-03-29
        Cleaned up POD for CollectInsertSizeMetrics method.  Added get_mean_insert_size
        method to CollectInsertSizeMetrics role.

0.04    2014-04-01
        Added method for ValidateSamFile.jar program including test suite.

0.05    2014-04-15
        Added method for SamToFastq.jar program including unit test.

0.06    2014-04-28
        Added a method for parsing metrics files generated by Picard.  Currently,
        a summary is hash is provided for CollectInsertSizeMetrics.jar.

0.07    2014-05-05
        Fixed incorrect Picard MarkDuplicates parameter METRICS to METRICS_FILE.

0.08    2014-05-09
        Fixed CollectInsertSizeMetrics method histogram file extension from txt to pdf.  Updated generate_insert_size_metrics.pl script to work on a single BAM.

0.09    2014-06-22
        Updated Picard.pm to include HPF::Roles::SGE instead of HPF::SGE::Roles.

0.12    2014-11-08
        Updated tests for roles instead of the class.  Code cleanup.