@@ -4,9 +4,9 @@
       "Richard de Borja <richard.deborja@sickkids.ca>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.4205",
+   "generated_by" : "Module::Build version 0.421",
    "license" : [
-      "artistic_2"
+      "unknown"
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
@@ -22,6 +22,13 @@
       "configure" : {
          "requires" : {
             "Module::Build" : "0"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Carp" : "0",
+            "Moose" : "0",
+            "Moose::Role" : "0"
          }
       }
    },
@@ -56,10 +63,5 @@
       }
    },
    "release_status" : "stable",
-   "resources" : {
-      "license" : [
-         "http://www.perlfoundation.org/artistic_license_2_0"
-      ]
-   },
-   "version" : "0.11"
+   "version" : "0.12"
 }
