@@ -1,13 +1,16 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.4205
+# Note: this file was auto-generated by Module::Build::Compat version 0.4210
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
   'NAME' => 'NGS::Tools::Picard',
-  'VERSION_FROM' => 'lib/NGS/Tools/Picard.pm',
-  'PREREQ_PM' => {
-                   'Test::More' => 0
-                 },
   'INSTALLDIRS' => 'site',
+  'PL_FILES' => {},
+  'PREREQ_PM' => {
+                   'Carp' => 0,
+                   'Test::More' => 0,
+                   'Moose::Role' => 0,
+                   'Moose' => 0
+                 },
   'EXE_FILES' => [
                    'bin/addrg.pl',
                    'bin/bam2fastq.pl',
@@ -16,6 +19,6 @@ WriteMakefile
                    'bin/sortsam.pl',
                    'bin/validate_bam_file.pl'
                  ],
-  'PL_FILES' => {}
+  'VERSION_FROM' => 'lib/NGS/Tools/Picard.pm'
 )
 ;
