@@ -31,4 +31,5 @@ Revision history for NGS-Tools-Picard
         Updated Picard.pm to include HPF::Roles::SGE instead of HPF::SGE::Roles.
 
 0.12    2014-11-08
-        Updated tests for roles instead of the class.  Code cleanup.
+        Updated tests for roles instead of the class.  Code cleanup.  Removed dependency on
+        any HPF library.  This makes the package completely independent of execution.
